frontend/test/should_pass/Abstract_to_compliant_2.grg
#using "abstract_program__ecore.gm"

rule activityToCompliant(ref tasks:set<Node>) {
	modify {		
		eval {
			for(t:Node in tasks) { 
				def var tt:_abstractPrograms::_Task = (_abstractPrograms::_Task)t;
				emit(" test "+tt._name);
			}
		}
	}
}
