frontend/test/should_fail/matchclassimplementsnondefdef_003.grg
#using "matchclassmodel.gm"

test t() implements shared
{
---
	def var v:int;
}

match class shared
{
	var v:int;
}
